kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-clusterip-service
spec:
  selector:
    app: my-2048-game
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
