kubernetes/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost # Replace with your domain or use a placeholder like localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: my-clusterip-service
                port:
                  number: 8080
